@@ -239,13 +239,28 @@ public class ViewByMeal extends FragmentActivity implements OnDateSelectedListen
 			ArrayList<String> locIDsRaw = new ArrayList<String>(locs);
 			Collections.sort(locIDsRaw);
 			locIDsToShow = new ArrayList<Integer>();
-			for (String s : locIDsRaw)
-				locIDsToShow.add(Integer.valueOf(s.substring(2)));
+			try { // TODO: remove this block when everyone is >= ver 9
+				for (String s : locIDsRaw)
+					locIDsToShow.add(Integer.valueOf(s.substring(2)));
+			} catch (RuntimeException e) {
+				locIDsToShow = lP.getIDsForType(0, 1, 2);
+				locs = new HashSet<String>(locIDsToShow.size());
+				int numLocs = locIDsToShow.size();
+				for (int i = 0; i < numLocs; ++i) {
+					String locNum = String.format("%02d%d", i, locIDsToShow.get(i));
+					locs.add(String.valueOf(locNum));
+				}
+				editor.putStringSet(PREF_LOCATIONORDER, locs);
+				editor.commit();
+			}
 		} else { // new pref
 			locIDsToShow = lP.getIDsForType(0, 1, 2);
 			locs = new HashSet<String>(locIDsToShow.size());
-			for (Integer i : locIDsToShow)
-				locs.add(String.valueOf(i));
+			int numLocs = locIDsToShow.size();
+    		for (int i = 0; i < numLocs; ++i) {
+    			String locNum = String.format("%02d%d", i, locIDsToShow.get(i));
+    			locs.add(String.valueOf(locNum));
+    		}
 			editor.putStringSet(PREF_LOCATIONORDER, locs);
 			editor.commit();
 		}
@@ -291,6 +306,7 @@ public class ViewByMeal extends FragmentActivity implements OnDateSelectedListen
         	editor.commit();
         }
         // versions <= 7 used multiple keys to store loc order, delete these
+        // TODO: remove when everyone is >= 9
         if (prefs.getInt(PREF_LASTVER, 0) <= 7) {
         	int numLocs = prefs.getInt(PREF_NUMLOCS, -1);
         	for (int i = 0; i < numLocs; ++i)
